# stock-inator

./: README.md
.devcontainer/: devcontainer.json
backend/: .env.example  app.py  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/services/: news.py  reddit.py  sentiment.py  stock.py
data/: posts.csv  sentiment_log.jsonl
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: client.ts
frontend/src/components/: Footer.ts  Header.ts  PostFeed.ts  SearchBar.ts  SentimentChart.ts  StatsGrid.ts  StockChart.ts  WordCloud.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
